# vedock

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  requirements-client.txt  requirements-core.txt  requirements-dev.txt  requirements-fast-ml.txt  requirements-local-core.txt  requirements-text.txt  requirements.txt  run.py  serve.py  start-vedock.cmd  worker.py
demo/: pattern_sequences.txt  story_prompts.csv
docs/: ARCHITECTURE.md  DATASET_PIPELINE.md  DEMO_SCRIPT.md  DEPENDENCY_REPORT.md  EXISTING_CODE_ASSESSMENT.md  FUNCTIONAL_REPAIR_REPORT.md  HOSTED_INFERENCE_ARCHITECTURE.md  INFERENCE_RUNTIME_CONTRACT.md  LOCAL_NODE_ARCHITECTURE.md  PRODUCT_EXPANSION_REPORT.md  PRODUCT_SPEC.md  READ_ONLY_AI_CODE_ASSESSMENT.md  RISK_REGISTER.md  RUNNING_VEDOCK.md  TWO_DAY_IMPLEMENTATION_PLAN.md  VERIFICATION_REPORT.md
installer/: VedockInstaller.spec  install-linux.sh  vedock_installer.py
scripts/: setup-portable.ps1  setup.ps1  start.ps1
tests/: conftest.py  test_app.py  test_capability_driven_inference.py  test_connected_device_and_privacy.py  test_datasets.py  test_device_resources.py  test_local_job_preparation.py  test_parameters_jobs_merge.py  test_product_expansion.py
vedock/: __init__.py  config.py  extensions.py  models.py
vedock/api/: routes.py
vedock/auth/: routes.py
vedock/main/: routes.py
vedock/runtimes/: __init__.py  base.py  parameters.py  pattern.py  registry.py  sklearn_image.py  tabular.py  transformers_text.py
vedock_cli/: __init__.py  desktop.py  device.py  local_jobs.py  local_worker.py  main.py  resources.py
(+45 files in other folders)
