[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vedock"
version = "0.1.0"
description = "Build any AI. No code. Full control."
readme = "docs/PRODUCT_SPEC.md"
requires-python = ">=3.11"
dependencies = [
  "Flask>=3.1,<4",
  "Flask-SQLAlchemy>=3.1,<4",
  "Flask-Login>=0.6,<1",
  "SQLAlchemy>=2.0,<3",
  "python-dotenv>=1.0,<2",
  "waitress>=3,<4",
  "click>=8,<9",
  "requests>=2.31,<3",
  "psutil>=5.9,<8",
  "Pillow>=10,<13",
]

[project.optional-dependencies]
text = [
  "torch>=2.2,<3",
  "transformers>=4.40,<5",
  "datasets>=2.18,<5",
  "safetensors>=0.4,<1",
  "accelerate>=0.26,<2",
  "peft>=0.12,<1",
]
fast = [
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "scikit-learn>=1.4,<2",
  "joblib>=1.3,<2",
]
dev = ["pytest>=8,<9", "pyinstaller>=6,<7"]

[project.scripts]
vedock = "vedock_cli.main:cli"

[tool.setuptools.packages.find]
include = ["vedock*", "vedock_cli*"]

[tool.setuptools.package-data]
vedock = ["templates/**/*.html", "static/*.css", "static/*.js"]
vedock_cli = ["assets/*.png", "assets/*.ico"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
